--- a/view/seat_selectionD.html
+++ b/view/seat_selectionD.html
@@ -12,14 +12,14 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>seat_selectionA</title>
+    <title>seat_selectionD</title>
     <style>
-        .layoutArea {
+
+        .layoutArea{
             display: flex;
             align-items: center;
             flex-direction: column;
         }
-
         .sectionTop {
             margin-top: 8rem;
             width: 100%;
@@ -81,7 +81,7 @@
 
         .seatsArea {
             display: grid;
-            grid-template-columns: repeat(10, 1fr);
+            grid-template-columns: repeat(12, 1fr);
             /* 좌석 8개 한 줄 */
             justify-items: center;
             /* 좌석들 각자의 중앙 정렬 */
@@ -97,7 +97,7 @@
         .seatsArea label {
             margin: 0.5rem;
             font-size: 1.6rem;
-            background-color: D9D9D9;
+            background-color: #D9D9D9;
         }
 
         .seat {
@@ -117,7 +117,7 @@
         }
 
         /* 선택되지 않은 좌석 */
-        label {
+        label{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -134,9 +134,9 @@
             background-color: #ff9933;
         }
 
-        .chosenBtn {
+        .chosenBtn{
             position: absolute;
-            left: 90%;
+            left : 90%;
             bottom: 4%;
             width: 8rem;
             height: 4.5rem;
@@ -167,31 +167,33 @@
 
             <section class="sectionBottom">
                 <div class="seatsArea">
-                    <empty></empty>
+                    
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">A1</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">A2</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">A3</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">A4</label>
-
+                    
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">A5</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">A6</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">A7</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">A8</label>
-                    <empty></empty>
+                    
 
                 </div>
                 <div class="seatsArea">
@@ -200,21 +202,22 @@
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
@@ -228,21 +231,22 @@
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
@@ -256,21 +260,22 @@
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
@@ -284,21 +289,21 @@
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
@@ -306,7 +311,7 @@
                     <label for="seat8">8</label>
 
                 </div>
-                <button id="choosenSeat" class="chosenBtn">선택완료</button>
+                <button class="chosenBtn">선택완료</button>
             </section>
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
@@ -330,14 +335,6 @@
         </section>
 
     </div>
-    <!-- ==script== -->
-    <script>
-        const choosenSeat = document.getElementById("choosenSeat");
-
-        choosenSeat.addEventListener("click", () => {
-            window.location.href = "/payment";
-        });
-    </script>
 </body>
 
 </html>
