--- a/view/payment_point_selection_popup.ejs
+++ b/view/payment_point_selection_popup.ejs
@@ -2,7 +2,6 @@
 <html lang="ko">
 
 <head>
-    <title>Hexagon Cinema</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font -->
@@ -11,18 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
-
+    <!-- css -->
     <link rel="stylesheet" href="style.css">
+    <title>payment_point_selection_popup</title>
     <style>
         .earnPointPopup {
             width: 84rem;
-            height: 54rem;
-
-            position: absolute;
-            left: calc(50% - 42rem);
-            top: calc(50% - 27rem - 3rem);
-
-            background-color: #ADADAD;
+            height: 100%;
 
             display: flex;
             flex-wrap: wrap;
@@ -30,56 +24,68 @@
             justify-content: center;
         }
 
-        .popupBar {
-            width: 100%;
-            height: 4.5rem;
-            background-color: #E6E6E6;
-        }
-
         .earnPointTitle {
             width: 100%;
 
-            font-size: 5rem;
-            font-weight: 600;
+            font-size: 2.4rem;
             letter-spacing: .5rem;
+            color: white;
 
             text-align: center;
         }
 
         .earnPointBtnWrapper {
-            width: 100%;
+            width: 80%;
 
             display: flex;
             justify-content: space-evenly;
+            margin-bottom: 2rem;
         }
 
         .earnPointBtn {
-            width: 36rem;
+            width: 18rem;
             height: 18rem;
 
-            background-color: #EDEDED;
+            background-color: #3D3F4D;
 
             font-size: 3.2rem;
 
+            color: #ffffff;
             border: none;
+            border-radius: 0.5rem;
+            box-shadow:
+                0 1px 1px rgba(0, 0, 0, 0.08),
+                0 2px 2px rgba(0, 0, 0, 0.12),
+                0 4px 4px rgba(0, 0, 0, 0.16),
+                0 8px 8px rgba(0, 0, 0, 0.20);
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            cursor: pointer;
+        }
+
+        .earnPointBtn:hover {
+            background-color: #d4d4d41c;
+
         }
 
         .earnPointBtn:active {
-            background-color: #d4d4d4;
+            background-color: #d4d4d41c;
         }
 
         .showEarnPoint {
-            width: 50%;
-            height: 10rem;
-            background-color: #444444;
+            width: 55%;
+            height: 6rem;
+            /* background-color: #444444; */
+            border: .15rem solid #fff;
+            border-radius: 0.5rem;
+
         }
 
         .showEarnPointText {
-            font-size: 2.4rem;
-            color: white;
-            line-height: 10rem;
-
+            font-size: 1.8rem;
             text-align: center;
+            line-height: 6rem;
+            color: #fff;
+
         }
 
         .earnPopupMarginTop {
@@ -89,30 +95,62 @@
 </head>
 
 <body>
+    <!-- ===최상위 컨테이너=== -->
     <div class="wrap">
+        <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
-            <!-- 여기에서 콘텐츠가 삽입됩니다. -->
-            <div id="earnPointPopup" class="earnPointPopup">
-                <div class="popupBar"></div>
-                <h1 id="earnPointTitle" class="earnPointTitle earnPopupMarginTop">포인트를 적립하시겠습니까?</h1>
-                <div id="earnPointBtnWrapper" class="earnPointBtnWrapper earnPopupMarginTop">
-                    <button id="earnPointNo" class="earnPointBtn">아니오</button>
-                    <button id="earnPointYes" class="earnPointBtn">예</button>
-                </div>
+            <!-- ===사이드바 영역=== -->
+            <section class="progressSidebar">
+                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
+            </section>
+            <!-- ===팝업 영역=== -->
+            <section class="popupArea">
+                <article class="popupBar">
+                    <p class="popupTitle popupBarTextCommon">팝업제목</p>
+                    <i class="popupBarTextCommon fa-solid fa-x"></i>
+                </article>
+                <section class="popupContent">
+                    <div id="earnPointPopup" class="earnPointPopup">
+                        <p id="earnPointTitle" class="earnPointTitle earnPopupMarginTop">포인트를 적립하시겠습니까?</p>
+                        <div id="showEarnPoint" class="showEarnPoint earnPopupMarginTop">
+                            <p class="showEarnPointText">적립 예정 포인트 <span class="showEarnPointText">104</span>원</p>
+                        </div>
+                        <div id="earnPointBtnWrapper" class="earnPointBtnWrapper earnPopupMarginTop">
+                            <button id="earnPointYes" class="earnPointBtn">아니오</button>
+                            <button id="earnPointNo" class="earnPointBtn">예</button>
+                        </div>
 
-                <div id="showEarnPoint" class="showEarnPoint earnPopupMarginTop">
-                    <h2 id="showEarnPointText" class="showEarnPointText">적립예정포인트</h2>
-                </div>
-            </div>
+
+                    </div>
+                </section>
+            </section>
+        </section>
+        <!-- ===하단바 영역=== -->
+        <section class="bottomBar">
+            <article class="barButtonsArea">
+                <button class="barButtons staffCallButton">직원호출</button>
+                <button class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
+                <button class="barButtons"><i class="bottomBarIcon fa-solid fa-backward"></i></button>
+            </article>
+            <img class="logoImg" src="images/logo.png" alt="로고이미지">
+            <article class="clockArea"><i class="bottomBarIcon fa-regular fa-clock"></i><span
+                    class="timeDisplay">12:00</span>
+            </article>
+        </section>
+
     </div>
+    <!-- ==script== -->
     <script>
         const earnPointYes = document.getElementById("earnPointYes");
         const earnPointNo = document.getElementById("earnPointNo");
 
-        earnPointYes.addEventListener( "click", () => {
+        earnPointYes.addEventListener("click", () => {
             window.location.href = "/inputPoint";
         });
-        earnPointNo.addEventListener( "click", () => {
+        earnPointNo.addEventListener("click", () => {
             window.location.href = "/buying";
         });
     </script>
