--- a/view/seat_selectionC.html
+++ b/view/seat_selectionC.html
@@ -12,14 +12,14 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>seat_selectionA</title>
+    <title>seat_selectionC</title>
     <style>
-        .layoutArea {
+
+        .layoutArea{
             display: flex;
             align-items: center;
             flex-direction: column;
         }
-
         .sectionTop {
             margin-top: 8rem;
             width: 100%;
@@ -117,7 +117,7 @@
         }
 
         /* 선택되지 않은 좌석 */
-        label {
+        label{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -134,9 +134,9 @@
             background-color: #ff9933;
         }
 
-        .chosenBtn {
+        .chosenBtn{
             position: absolute;
-            left: 90%;
+            left : 90%;
             bottom: 4%;
             width: 8rem;
             height: 4.5rem;
@@ -167,7 +167,7 @@
 
             <section class="sectionBottom">
                 <div class="seatsArea">
-                    <empty></empty>
+                    
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">A1</label>
 
@@ -179,7 +179,8 @@
 
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">A4</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">A5</label>
 
@@ -306,13 +307,13 @@
                     <label for="seat8">8</label>
 
                 </div>
-                <button id="choosenSeat" class="chosenBtn">선택완료</button>
+                <button class="chosenBtn">선택완료</button>
             </section>
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
                 <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings completedStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings completedStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
                 <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
         </section>
@@ -330,14 +331,6 @@
         </section>
 
     </div>
-    <!-- ==script== -->
-    <script>
-        const choosenSeat = document.getElementById("choosenSeat");
-
-        choosenSeat.addEventListener("click", () => {
-            window.location.href = "/payment";
-        });
-    </script>
 </body>
 
 </html>
