--- a/view/version1/payment_point_Accumulation_popup.ejs
+++ b/view/version1/payment_point_Accumulation_popup.ejs
@@ -13,25 +13,56 @@
 
     <!-- 외부 CSS 파일 링크 -->
     <link rel="stylesheet" href="style.css">
-    <title>payment_point_accumulation_popup</title>
+
+    <title>Document</title>
     <style>
         /* 타이틀박스 */
         .titleBox {
             text-align: center;
-            font-size: 2.4rem;
-            margin-bottom: 3.5rem;
-            color: #ffffff;
+            font-size: 1.8rem;
+            position: absolute;
+            top: 15%;
+            left: 50%;
+            transform: translate(-50%, -60%);
         }
 
         /* 키패드 영역 */
+        .keypadArea {
+            width: 30rem;
+            height: 25rem;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -63%);
+        }
+
+        .keypadAreaBackgruond {
+            height: 36rem;
+            width: 40rem;
+            background-color: #D9D9D9;
+            position: relative;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%, -60%);
+        }
+
         i {
             pointer-events: none;
             font-size: 1.5rem;
         }
 
+        .phoneNumber {
+            width: 29rem;
+            height: 4.5rem;
+            margin: 0.4rem;
+            font-size: 1.8rem;
+            background-color: #444444;
+            color: #EDEDED;
+        }
+
         .key {
-            width: 8rem;
-            height: 4rem;
+            width: 9rem;
+            height: 4.5rem;
             margin: 0.4rem;
             font-size: 1.8rem;
             background-color: #444444;
@@ -39,49 +70,22 @@
         }
 
         .check {
-            width: 26.5rem;
+            width: 100%;
             height: 4.5rem;
             font-size: 1.8rem;
             background-color: #EDEDED;
-        }
-
-        .keypadArea {
-            width: 25rem;
-            height: 25rem; text-align: center;
-            position: relative;
-        }
-
-        .phoneNumber {
-            width: 26.5rem;
-            height: 4.5rem;
-            margin: 0.4rem;
-            font-size: 1.8rem;
-            background-color: #444444;
-            color: #EDEDED;
-        }
-
-        .popupContent {
-            padding-top: 4rem;
-            text-align: center;
-        }
-
-        .keypadArea {
-            width: 35rem;
-            padding: 2rem;
-            height: 33rem;
-            background-color: #D9D9D9;
-            align-content: center;
-            margin: auto;
-            padding-left: 2.5rem;
         }
 
         .nextBtn {
-            width: 8rem;
-            height: 3.5rem;
+            width: 9rem;
+            height: 4.5rem;
             font-size: 1.8rem;
             background-color: #EDEDED;
             color: #444444;
-            margin-left: 70rem;
+            position: relative;
+            float: right;
+            top: 10%;
+            right: 5%;
         }
     </style>
 </head>
@@ -102,7 +106,7 @@
             <!-- ===팝업 영역=== -->
             <section class="popupArea">
                 <article class="popupBar">
-                    <p class="popupTitle popupBarTextCommon">전화번호 확인</p>
+                    <p class="popupTitle popupBarTextCommon">팝업제목</p>
                     <i class="popupBarTextCommon fa-solid fa-x"></i>
                 </article>
                 <section class="popupContent">
@@ -147,7 +151,6 @@
         </section>
 
     </div>
-    <!-- ==script== -->
     <script>
         const earnPointBtn = document.getElementById("earnPointBtn");
         const notEarnPointBtn = document.getElementById("notEarnPointBtn");
@@ -161,5 +164,4 @@
         });
     </script>
 </body>
-
 </html>
