--- a/view/version1/ticket_print_popup.ejs
+++ b/view/version1/ticket_print_popup.ejs
@@ -12,8 +12,12 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>ticket_print_popup</title>
+    <title>ticket print popup</title>
     <style>
+        .wrap {
+            margin-top: 0rem;
+        }
+
         .popupContent {
             text-align: center;
             padding-top: 4rem;
@@ -22,18 +26,15 @@
         .printLabel {
             font-size: 2.4rem;
             padding-bottom: 2.5rem;
-            color: #FFFFFF;
         }
 
         .ticketImg {
-            width: 25rem;
-            height: 30rem;
-            margin:auto ;
-            margin-top: 0.5rem;
+            width: 40rem;
+            height: 25rem;
+            margin-left: 22rem;
+            margin-top: 15px;
             background-color: #444444;
             margin-bottom: 4rem;
-            color: white;
-            font-size: 1.5rem;
         }
 
         .confirmButtonArea {
@@ -46,7 +47,6 @@
             width: 7rem;
             height: 3.5rem;
             font-size: 1.6rem;
-            margin-top: -1rem;
         }
     </style>
 </head>
@@ -64,11 +64,10 @@
                 </article>
                 <section class="popupContent">
                     <p class="printLabel">티켓 출력</p>
-                    <div class="ticketImg">
-                         영화 입장권
-                    </div>
+                    <div class="ticketImg"></div>
                     <section class="confirmButtonArea">
-                        <button id="printTicketBtn" class="confirmButtons">프린트</button>
+                        <button class="confirmButtons">아니요</button>
+                        <button id="printTicketBtn" class="confirmButtons">예</button>
                     </section>
                 </section>
             </section>
@@ -92,7 +91,8 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
-    <!-- ==script== -->
+    </div>
+
     <script>
         const printTicketBtn = document.getElementById("printTicketBtn");
 
@@ -101,8 +101,6 @@
             window.location.href = "/complete";
         });
     </script>
-</body>
-    </div>
 </body>
 
 </html>
