--- a/view/html/payment.html
+++ b/view/html/payment.html
@@ -125,7 +125,7 @@
                 </article>
                 <article class="paymentOptionBox">
                     <div class="cardPayment paymentOptionStyle">
-                        <div class="paymentImg cardImg"></div>
+                        <div id="paymentCard" class="paymentImg cardImg"></div>
                     </div>
                     <div class="pointsUsage paymentOptionStyle">
                         <div class="paymentImg pointImg"></div>
@@ -145,7 +145,14 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
-
+        <!-- ==script== -->
+        <script>
+            const paymentCard = document.getElementById("paymentCard");
+    
+            paymentCard.addEventListener("click", ()=>{
+                window.location.href = "/earnPoint";
+            });
+        </script>
     </div>
 </body>
 
