--- a/view/html/seat_selectionB.html
+++ b/view/html/seat_selectionB.html
@@ -306,8 +306,8 @@
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
                 <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings completedStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings completedStep"><span class="stepLabel">좌석 선택</span></div>
                 <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
         </section>
