--- a/view/html/seat_selectionD.html
+++ b/view/html/seat_selectionD.html
@@ -97,7 +97,7 @@
         .seatsArea label {
             margin: 0.5rem;
             font-size: 1.6rem;
-            background-color: D9D9D9;
+            background-color: #D9D9D9;
         }
 
         .seat {
@@ -316,8 +316,8 @@
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
                 <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings completedStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings completedStep"><span class="stepLabel">좌석 선택</span></div>
                 <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
         </section>
