--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,8 @@
   position: relative;
   width: 100%;
   height: 91%;
-  background: #2d2d37;
+  background: linear-gradient(to top, #363d44, #252e32); 
+
 }
 
 /* ===하단바 영역=== */
@@ -33,7 +34,9 @@
   justify-content: space-between;
   background-color: #24242C;
   padding: 0 5rem;
-  box-shadow: 0px -15px 5px -2px gray;
+  box-shadow: 0 -7px 7px rgba(67, 72, 71, 0.26);
+  position: relative;
+  z-index: 100;
 }
 
 .barButtonsArea {
@@ -49,15 +52,21 @@
   justify-content: center;
   font-size: 1.3rem;
   background: #3f3f3f;
-  color: #24242C;
+  color: #1d1d25;
   padding: 0.5rem 1rem;
   border: 1px solid;
+  box-shadow: 0 2px 3px rgba(23, 23, 23, 0.412),
+              inset 0 0 5px 5px #444444;
+  
 }
 
 .barButtons:hover {
   background: #6F122D;
   color: #77384b;
-  box-shadow: 0 4px 8px rgba(22, 22, 22, 0.3);
+  
+  box-shadow: 0 2px 3px rgba(63, 22, 22, 0.412),
+  inset 0 0 5px 5px #322222;
+
 }
 
 .bottomBarIcon {
@@ -138,8 +147,9 @@
   justify-content: space-between;
   align-items: center;
   background-color: #1a2129;
-  color: #50657b;
+  color: #3a4a5c;
   padding: 2rem;
+  box-shadow: 0 10px 10px -5px rgba(0, 25, 24, 0.836);
 }
 
 .popupBarTextCommon {
@@ -150,5 +160,10 @@
   width: 100%;
   height: 92%;
   background: #0F2027;
-  background: linear-gradient(to bottom, #2c53644d, #203a4385, #0F2027);
+  background: linear-gradient(to bottom, #2c536437, #203a4385, #0f2027c8);
+  box-shadow: 
+  0 1px 1px rgba(0,0,0,0.08), 
+  0 2px 2px rgba(0,0,0,0.12), 
+  0 4px 4px rgba(0,0,0,0.16), 
+  0 8px 8px rgba(0,0,0,0.20);
 }
