--- a/view/html/payment_point_accumulation_popup.html
+++ b/view/html/payment_point_accumulation_popup.html
@@ -124,11 +124,11 @@
                             <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
                             <button class="key">0</button>
                             <button class="key">재입력</button>
-                            <button class="check">확인</button>
+                            <button id="earnPointBtn" class="check">확인</button>
                         </section>
                     </div>
                     <!-- 건너뛰기 버튼 -->
-                    <button class="nextBtn">건너뛰기</button>
+                    <button id="notEarnPointBtn" class="nextBtn">건너뛰기</button>
 
                 </section>
             </section>
@@ -147,6 +147,19 @@
         </section>
 
     </div>
+    <!-- ==script== -->
+    <script>
+        const earnPointBtn = document.getElementById("earnPointBtn");
+        const notEarnPointBtn = document.getElementById("notEarnPointBtn");
+
+        const buttons = [ earnPointBtn, notEarnPointBtn ];
+
+        buttons.forEach( ( button )=>{
+            button.addEventListener("click", ()=>{
+                window.location.href = "/buying";
+            });
+        });
+    </script>
 </body>
 
 </html>
