--- a/view/html/payment_point_selection_popup.html
+++ b/view/html/payment_point_selection_popup.html
@@ -58,11 +58,12 @@
                 0 2px 2px rgba(0, 0, 0, 0.12),
                 0 4px 4px rgba(0, 0, 0, 0.16),
                 0 8px 8px rgba(0, 0, 0, 0.20);
-                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-                cursor: pointer;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            cursor: pointer;
         }
-        .earnPointBtn:hover{
-        background-color: #d4d4d41c;
+
+        .earnPointBtn:hover {
+            background-color: #d4d4d41c;
 
         }
 
@@ -141,6 +142,18 @@
         </section>
 
     </div>
+    <!-- ==script== -->
+    <script>
+        const earnPointYes = document.getElementById("earnPointYes");
+        const earnPointNo = document.getElementById("earnPointNo");
+
+        earnPointYes.addEventListener("click", () => {
+            window.location.href = "/inputPoint";
+        });
+        earnPointNo.addEventListener("click", () => {
+            window.location.href = "/buying";
+        });
+    </script>
 </body>
 
 </html>
