--- a/view/select_headcount_popup.ejs
+++ b/view/select_headcount_popup.ejs
@@ -251,7 +251,7 @@
         <!-- ==script== -->
         <script>
             /*
-            const movieData = <% - JSON.stringify(movieData) %>;
+            const movieData = JSON.stringify(movieData);
             //영화관 인원수 디폴트 값 추가 
             movieData.adult = 0;
             movieData.youth = 0;
