--- a/view/html/complete.html
+++ b/view/html/complete.html
@@ -17,17 +17,19 @@
     <style>
         .popupContent {
             display: flex;
-            padding: 2rem;
+            padding: 5rem 2rem;
             align-items: center;
             flex-direction: column;
         }
 
         .popupContentText {
-            font-size: 2.4rem;
+            position: relative;
+            font-size: 2.2rem;
             width: 100%;
             text-align: center;
-            margin: 2rem 0 3rem 0;
-            color: white;
+            margin: 1rem 0 1rem 0;
+            color: rgb(192, 192, 192);
+            z-index: 999;
         }
 
         /*  결제완료 이미지 박스 */
@@ -77,11 +79,10 @@
 
                 <!-- 타이틀 박스 -->
                 <p class="popupContentText">결제가 완료되었습니다.</p>
+                <p class="popupContentText"><span id="timer" class="popupContentText">3</span>초 후에 메인화면으로 돌아갑니다.</p>
 
                 <!-- 결제완료 이미지 -->
                 <div class="popupContentImg"></div>
-                <p id="timer" class="popupContentText">5</p>
-
             </section>
         </section>
     </section>
@@ -101,10 +102,18 @@
 </div>
 <!-- ==script== -->
 <script>
-    document.addEventListener("DOMContentLoaded", () => { // 5초뒤 종료
-        setTimeout(() => {
-            window.location.href = "/";
-        }, 5000);
+    document.addEventListener("DOMContentLoaded", () => { // 3초뒤 종료
+        const timer = document.getElementById("timer");
+        timer.style.color = "white";
+        for (let i = 1; i <= 3; i++) {
+            setTimeout(() => {
+                timer.innerText = `${4 - i}`;
+
+                if (i === 3) {
+                    window.location.href = "/showPayment";
+                }
+            }, i * 1000);
+        }
     });
 </script>
 </body>
