--- a/view/html/payment_card_input_popup.html
+++ b/view/html/payment_card_input_popup.html
@@ -66,14 +66,14 @@
                 <section class="popupContent">
                     <!-- ~여기에 작성~ -->
                     <p class="popupContentText">카드를 카드 리더기에 삽입해 주세요.</p>
-                    <p  class="timeoutText"><span id="timer" class="timer">5</span>초 후 자동종료 됩니다.</p>
+                    <p  class="timeoutText"><span id="timer" class="timer">3</span>초 후 자동종료 됩니다.</p>
                     <div class="popupContentImg"></div>
                 </section>
             </section>
         </section>
         <!-- ===하단바 영역=== -->
         <section class="bottomBar">
-            <article class="barButtonsArea">1
+            <article class="barButtonsArea">
 
                 <button class="barButtons staffCallButton">직원호출</button>
                 <button class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
@@ -90,11 +90,11 @@
         document.addEventListener("DOMContentLoaded", () => { // 5초뒤 종료
             const timer = document.getElementById("timer");
             timer.style.color = "white";
-            for (let i = 1; i <= 5; i++) {
+            for (let i = 1; i <= 3;i++) {
                 setTimeout(() => {
-                    timer.innerText = `${6 - i}`;
+                    timer.innerText = `${3 - i}`;
 
-                    if (i === 5) {
+                    if (i === 3) {
                         window.location.href = "/showPayment";
                     }
                 }, i * 1000);
